packages/taquito-michel-codec/test/contracts_015/ill_typed/unpair_field_annotation_mismatch.tz
parameter (unit :param_unit);
storage (unit :u1);
code { DROP ;

       UNIT @b; UNIT @a; PAIR %@ %@;
       # Field annotations must match (or be ommited)
       DUP; UNPAIR %c %d; DROP 2;
       DROP;

       UNIT; NIL operation; PAIR }
